SERVER-75927 Evaluate command-level let only once, even when sharded

Command-level let bindings are evaluated once for the whole command. For
most expressions this is not observable, but for $rand it is. If you
need a random value drawn once and then used consistently within the
query, you use a command-level binding.

Previously this was only working correctly for sharded aggregate queries:
we were evaluating the let bindings on each shard separately. This commit
fixes the find command: it ensures we evaluate the expressions once on
mongos and then serialize the resulting values to the shards.

This commit also includes test cases to demonstrate the same bug in
write commands, to be fixed separately (SERVER-82042).